# bifrost_salmonella_subspecies_dtartrate

./: Dockerfile  README.md  environment.yml  setup.cfg  setup.py
bifrost_enterobase/: EnteroLookup.py  __main__.py  config.yaml  datadump.py  pipeline.smk
bifrost_salmonella_subspecies_dtartrate/: NearestSubspecies.py  SeqUtils.py  __init__.py  __main__.py  config.yaml  datadump.py  getposfromsam.py  launcher.py  pipeline.smk  rule__dtartrate.py  rule__subspecies.py  salmonella_subspecies_dtartrate.py
resources/: salmonella_subspecies_STs.txt
resources/d_Tartrate/: srst2_d_Tartrate.fasta  srst2_d_Tartrate.fasta.amb  srst2_d_Tartrate.fasta.pac
resources/salmonella/: Salmonella_enterica.fasta  aroC.tfa  dnaN.tfa  hisD.tfa  purE.tfa  sucA.tfa  thrA.tfa
ressources/d_Tartrate/: dTartrate_readme.txt  srst2_d_Tartrate.fasta.ann  srst2_d_Tartrate.fasta.bwt  srst2_d_Tartrate.fasta.sa
ressources/salmonella/: hemD.tfa  salmonella.txt.bak  senterica.txt
tests/: test_salmonella_subspecies_dtartrate.py  test_simple.py
