[bumpversion]
current_version = v1_0_5__
parse = (v(?P<major>\d+))(_(?P<minor>\d+))(_(?P<patch>\d+)__)
serialize = v{major}_{minor}_{patch}__
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_salmonella_subspecies_dtartrate/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_salmonella_subspecies_dtartrate/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:tests/test_simple.py]
search = component_name = "salmonella_subspecies_dtartrate__{current_version}"
replace = component_name = "salmonella_subspecies_dtartrate__{new_version}"

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = 
	tests
